# XKHyperCom

./: .gitignore  CHANGELOG  CMakeLists.txt  defines.h  defines.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portsettings.cpp  portsettings.h  portsettings.ui  serial.cpp  serial.h  serialconsole.cpp  serialconsole.h  serialutils.cpp  serialutils.h
cmake/: FindQextSerialPort.cmake
